<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radio_group_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onRadioButtonClicked"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radiobutton_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:text="@string/radiobutton_string_date" />

        <RadioButton
            android:id="@+id/radiobutton_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:text="@string/radiobutton_string_place" />

        <RadioButton
            android:id="@+id/radiobutton_without_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:text="@string/radiobutton_string_without_filter" />

    </RadioGroup>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorBlue"
        android:text="@string/button_string_ok" />

</LinearLayout>