...
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:tag="1"
                android:text="@string/radiobutton_string_roomB" />

            <RadioButton
                android:id="@+id/radiobutton_roomC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:tag="2"
                android:text="@string/radiobutton_string_roomC" />

            <RadioButton
                android:id="@+id/radiobutton_roomD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:tag="3"
                android:text="@string/radiobutton_string_roomD" />

...
